2010-11-25	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/node.pm: Fixed node_add problem introduced when doing 
	database refactoring

	* pf/addons/recovery.pl, pf/bin/pfcmd, pf/lib/pf/vlan.pm, 
	pf/sbin/pfsetvlan, pf/t/vlan.t: API change
	- Renamed subroutines names from procedural to object-oriented style
	- Removed custom_ from custom_doWeActOnThisTrap

	* pf/ChangeLog, pf/lib/pf/radius.pm, pf/lib/pf/vlan/custom.pm, 
	pf/lib/pf/vlan.pm, pf/t/vlan.t: API improvements and new code samples
	regarding VLAN assignments. Fixes #971;
	- Renamed subroutines names from procedural to object-oriented style
	- shouldAutoRegister now has 802.1X username in its parameters
	- Unified interfaces between getViolationVlan, getRegistrationVlan and
	getNormalVlan
	- Added 802.1X username in getViolationVlan, getRegistrationVlan and
	getNormalVlan
	- Added samples in getNormalVlan and shouldAutoRegister
	- POD improvements
	http://www.packetfence.org/bugs/view.php?id=971

	* pf/cgi-bin/register.cgi: Removed node.vlan assignment on captive 
	portal registration

2010-11-24	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/bin/flip.pl, pf/html/admin/common.php,
	pf/lib/pf/SNMP/Cisco/Catalyst_2960.pm, pf/lib/pf/SNMP/MockedSwitch.pm,
	pf/lib/pf/SNMP.pm, pf/lib/pf/config.pm, pf/lib/pf/radius/custom.pm,
	pf/lib/pf/radius.pm, pf/lib/pf/vlan.pm, pf/t/data/switches.conf,
	pf/t/radius.t: MAC Authentication Bypass is now Wired MAC 
	Authentication after some discussion. Changes required all over the
	place.

	* pf/t/pod.t and others: Important fix to POD doc test removing false
	alarms and fixed all missing sections from basic test

	* Moved test/ into addons/: test/ was a misleading directory for these
	scripts

	* Renamed pf/addons/802.1X/rlm_perl_packetfence.pl to 
	pf/addons/802.1X/packetfence.pm: Old name didn't bring any added value
	and was kind of obscure, so it's renamed now to represent a module.
	Note in UPGRADE and tests updated.
