@@ -1,3 +1,7 @@
+2010-11-25      Regis Balzard <rbalzard@inverse.ca>
+	* pf/lib/pf/config.pm: fixed an issue when reading 'trunkPort' in
+	floating_network_device.conf
+
 2010-11-25	Olivier Bilodeau <obilodeau@inverse.ca>
 	* pf/lib/pf/node.pm: Fixed node_add problem introduced when doing 
 	database refactoring
